# mirror-goog-studio-main

./: .editorconfig  .gitattributes  .gitignore  BUILD.bazel  PREUPLOAD.cfg  README.md  build.gradle  building.md  contributing.md  navbar.md  source.md  studio.md
bazel/: BUILD  BUILD.maven  OWNERS  README.md  agent_coverage_reports.py  android.bzl  antlr.bzl  aosp_studio_linux.sh  app_inspection.bzl  approved_flaky_targets.txt  bazel  bazel.bzl  bazel.cmd  build_targets  common.bazel.rc  common.bazelrc  coverage-clean.py  coverage.bzl  coverage.py  coverage_report.bzl  darwin.bazel.rc  darwin.bazelrc  diff.bzl  emulator.bzl  functions.bzl  gradle.bzl  gradle_projects  groovy.bzl  jacoco_to_lcov.py  jarjar_rules.txt  jasmin.bzl  jvm_import.bzl  kotlin.bzl  lint.bzl  linux.bazel.rc  linux.bazelrc  maven.bzl  merge_archives.bzl  perfgate_linux.sh  perfgate_win.cmd  (+38 more)
bazel/avd/: BUILD  avd.bzl  build.gradle  emulator_launcher.sh.template  system_images.BUILD
bazel/avd/sample/: BUILD  EmulatorTest.java
bazel/ci/: README.md  studio_linux_canary.sh  studio_lldb.sh  studio_win_canary.cmd
bazel/coverage/: BUILD  BUILD.bazel-testlogs  OWNERS  WORKSPACE  baseline.bzl  coverage.bzl  drop_exempt.py  filter_lcov.py  generate_list.py  ignore_files_filter.py  jacoco_xml_to_lcov.py  merge_lcov.py  merge_tests.py  report.sh  results.bzl
bazel/docs/: iml-module.md
bazel/docs/assets/: iml-module-build-graph.dot
bazel/foundry/: BUILD  FoundryPerfgateMetrics.java  FoundryTest.java  build_docker.sh  build_docker_windows.sh
bazel/foundry/docker/: Dockerfile
bazel/foundry/docker_windows/: Dockerfile
bazel/lnzipper/: BUILD
bazel/maven/: BUILD.maven  README  android.pom  artifacts.bzl  maven_fetch.sh
bazel/native/matryoshka/: BUILD  doll.cpp  doll.h  simple_test.sh  test.cpp
bazel/perfetto_cfg/: OWNERS  perfetto_cfg.bzl
bazel/plugin/: .gitignore
bazel/prebuilts/linux/: bazel-complete.bash
bazel/prebuilts/mac/: bazel-complete.bash
bazel/qa/: OWNERS  qa_fast_linux.sh  qa_sanity_linux.sh  qa_sanity_linux_multirun.sh  qa_sanity_mac.sh  qa_smoke_linux.sh  qa_smoke_linux_multirun.sh  qa_smoke_mac.sh  qa_unreliable_linux.sh
bazel/qa/utils/: aggregate_xmls.py
bazel/rbe/: BUILD  DockerImageTest.java  PerfgateMetrics.java  build_docker.sh
bazel/rbe/docker_windows/: Dockerfile  README  README.md
bazel/repolinker/: BUILD  build.gradle
bazel/sdk/: BUILD  README.md  all_sdks_manifest.xml  dev-sdk-packages  prebuilts.studio.sdk.BUILD  prebuilts.studio.sdk.README.md  qa-sdk-packages  remote-sdk-packages  sdk.gitignore  sdk_utils.bzl
bazel/sdk/resources/: BUILD  linux_start_script.sh  mac_start_script.sh  win_start_script.bat
bazel/test/: BUILD
bazel/test/gradle/: BUILD
bazel/test/iml_to_bazel/: BUILD.bazel.test  README.md
bazel/test/kotlin/: BUILD
bazel/test/local_maven_repository_generator/: BUILD.golden  BUILD.noresolve.golden
bazel/test/pom_generator/: golden.pom  groovy-all-3.0.7.pom
bazel/toolchains/: BUILD  cc_toolchain_config.bzl  clang.BUILD
bazel/toolchains/darwin/: BUILD  wrapped_ar
bazel/toolchains/windows/: BUILD
bazel/utils/: aggregate_xmls.py
bazel/validations/: exec_props.bzl  flaky.bzl  py2.bzl  size.bzl  timeout.bzl
bazel/windows_toolchains/: WORKSPACE
bazel/windows_toolchains/bazel_0.22.0/: BUILD  CROSSTOOL
bazel/windows_toolchains/bazel_0.28.1/: BUILD
build-system/aapt2/: BUILD.bazel  build.gradle
build-system/aapt2-proto/: BUILD.bazel  build.gradle
build-system/integration-test/: BUILD  BUILD.bazel  build.gradle  integration-test.bzl  integration-tests.gradle
build-system/integration-test/api/: BUILD.bazel  build.gradle
build-system/integration-test/application/: BUILD  BUILD.bazel  build.gradle  lint_baseline.xml
build-system/integration-test/connected/: BUILD.bazel  build.gradle  connected-test.bzl
build-system/integration-test/databinding/: BUILD.bazel  build.gradle
build-system/integration-test/framework/: BUILD.bazel  build.gradle  lint_baseline.xml
build-system/integration-test/java-library-model-builder/: BUILD.bazel
build-system/integration-test/lint/: BUILD.bazel  build.gradle
build-system/integration-test/managed-devices/: BUILD.bazel  build.gradle
build-system/integration-test/native/: BUILD.bazel  build.gradle
build-system/integration-test/test-projects/: commonBuildScript.gradle  commonHeader.gradle
build-system/integration-test/utp/: BUILD.bazel  build.gradle
build-system/kotlin-compiler-embeddable/: BUILD.bazel  build.gradle
build-system/previous-versions/: BUILD.bazel
gmaven/: BUILD.bazel
lint/libs/lint-typedef-remover/: BUILD.bazel
profiler/native/: .clang-tidy  CMakeLists.txt  README.md  build.gradle
profiler/native/agent/: BUILD  CMakeLists.txt  agent.cc  agent.exports  agent.h  agent_component.h  daemon_socket.cc  daemon_socket.h  memory_component.cc  memory_component.h
profiler/native/cmake/: clang-tidy.cmake  install.cmake  linker-script.cmake  lint.cmake  linux-host.cmake  (+2 more)
utp/: BUILD.bazel
utp/android-device-provider-ddmlib/: BUILD  build.gradle
utp/android-device-provider-ddmlib-proto/: BUILD  build.gradle
utp/android-device-provider-gradle/: BUILD  build.gradle
utp/android-device-provider-gradle-proto/: BUILD  build.gradle  gradle_managed_android_device_provider_config.proto  gradle_managed_device_config.proto
utp/android-test-plugin-host-additional-test-output/: BUILD  build.gradle
utp/android-test-plugin-host-additional-test-output-proto/: BUILD  build.gradle
utp/android-test-plugin-host-coverage/: BUILD  build.gradle
utp/android-test-plugin-host-coverage-proto/: BUILD  build.gradle
utp/android-test-plugin-host-device-info/: BUILD  build.gradle
utp/android-test-plugin-host-device-info-proto/: BUILD  build.gradle
utp/android-test-plugin-host-logcat/: BUILD  build.gradle
utp/android-test-plugin-host-retention/: BUILD  build.gradle
utp/android-test-plugin-host-retention-proto/: BUILD  build.gradle
utp/android-test-plugin-result-listener-gradle/: BUILD  build.gradle
utp/android-test-plugin-result-listener-gradle-proto/: BUILD  build.gradle
(+11119 files in other folders)
