load("//tools/base/bazel:maven.bzl", "maven_repo", "maven_repository")

maven_repo(
    name = "gmaven",
    artifacts = [
        "//tools/data-binding:tools.baseLibrarySupport",
        "//tools/data-binding:tools.baseLibrary",
        "//tools/data-binding:tools.compilerCommon",
        "//tools/data-binding:tools.compiler",
        "//tools/analytics-library/inspector",
        "//tools/analytics-library/publisher",
        "//tools/base/build-system/gradle-core",
        "//tools/base/build-system/aapt2",
        "//tools/base/build-system/aapt2-proto",
        "//tools/base/lint/libs/lint-tests",
        "//tools/base/lint:tools.lint-gradle",
        "//tools/base/testutils:tools.testutils",
        "//tools/base/ddmlib:tools.ddmlib",
        "//tools/base/build-system/gradle-api:gradle-api",
        "//tools/base/build-system/builder-test-api:tools.builder-test-api",
        "//tools/base/build-system/builder-model:builder-model",
        "//tools/apkzlib:apkzlib",
        "//tools/base/build-system/aaptcompiler:aaptcompiler",
        "//tools/base/build-system/builder:builder",
        "//tools/base/build-system:tools.manifest-merger",
        "//tools/base/build-system:tools.apksig",
        "//tools/base/sdk-common:tools.sdk-common",
        "//tools/analytics-library/crash:tools.analytics-crash",
        "//tools/analytics-library/protos/src/main/proto:proto",
        "//tools/analytics-library/shared:tools.analytics-shared",
        "//tools/analytics-library/tracker:tools.analytics-tracker",
        "//tools/base/annotations:annotations",
        "//tools/base/sdklib:tools.sdklib",
        "//tools/base/common:tools.common",
        "//tools/base/repository:tools.repository",
        "//tools/base/layoutlib-api:tools.layoutlib-api",
        "//tools/base/lint:tools.lint-api",
        "//tools/base/lint:tools.lint-checks",
        "//tools/base/lint:tools.lint-model",
        "//tools/base/lint/cli:cli",
        "//tools/base/device_validator:tools.dvlib",
        "//tools/base/utp/android-device-provider-gradle-proto:android-device-provider-gradle-proto",
        "//tools/base/utp/android-test-plugin-host-coverage-proto:android-test-plugin-host-coverage-proto",
        "//tools/base/utp/android-test-plugin-host-retention-proto:android-test-plugin-host-retention-proto",
        "//tools/base/utp/android-test-plugin-result-listener-gradle-proto:android-test-plugin-result-listener-gradle-proto",
    ],
    include_sources = True,
    include_transitive_deps = False,
    visibility = ["//visibility:public"],
)

# This Maven repository contains artifacts that are built by Bazel, but also needed by
# AGP build. The AGP build uses this repo so that it does not have to rebuild the same
# artifacts again.

maven_repo(
    name = "agp_dependencies",
    artifacts = [
        # These direct dependencies are manually added to satisfy gradle
        # TODO: Analyze what can be cleaned up
        "//prebuilts/tools/common/m2:com.google.protobuf.protoc.3.10.0",
        "//prebuilts/tools/common/m2:io.grpc.protoc-gen-grpc-java.1.21.1",
        "//prebuilts/tools/common/m2:gradle.plugin.org.jetbrains.gradle.plugin.idea-ext.gradle-idea-ext.0.8.1",
        "//prebuilts/tools/common/m2:com.google.protobuf.protobuf-gradle-plugin.0.8.15",
        "//prebuilts/tools/common/m2:com.google.gradle.osdetector-gradle-plugin.1.7.0",
        "//prebuilts/tools/common/m2:org.parboiled.parboiled-core.1.0.2",
        "//prebuilts/tools/common/m2:org.parboiled.parboiled-java.1.0.2",
        "//prebuilts/tools/common/m2:com.googlecode.jarjar.jarjar.1.3",
        "//prebuilts/tools/common/m2:kr.motd.maven.os-maven-plugin.1.7.0",
        "//prebuilts/tools/common/m2:net.sf.proguard.proguard-gradle.5.2.1",
        "//prebuilts/tools/common/m2:net.sf.proguard.proguard-base.5.2.1",
        "//prebuilts/tools/common/m2:com.google.code.findbugs.jsr305.1.3.9",
        "//prebuilts/tools/common/m2:com.google.guava.guava.23.0",
        "//prebuilts/tools/common/m2:com.google.auto.value.auto-value-annotations.1.6.2",
        "//prebuilts/tools/common/m2:com.google.errorprone.error_prone_annotations.2.0.18",
        "//prebuilts/tools/common/m2:com.google.errorprone.error_prone_annotations.2.3.2",
        "//prebuilts/tools/common/m2:com.google.j2objc.j2objc-annotations.1.1",
        "//prebuilts/tools/common/m2:org.codehaus.mojo.animal-sniffer-annotations.1.14",
        "//prebuilts/tools/common/m2:org.ow2.asm.asm-debug-all.5.2",
        "//prebuilts/tools/common/m2:com.github.javaparser.javaparser-core.3.17.0",
        "//tools/base/third_party:cglib_cglib-nodep",
        "//tools/base/third_party:com.android.tools.build.jetifier_jetifier-core",
        "//tools/base/third_party:com.android.tools.build.jetifier_jetifier-processor",
        "//tools/base/third_party:com.android.tools.build_aapt2-proto",
        "//tools/base/third_party:com.android.tools.build_bundletool",
        "//tools/base/third_party:com.android.tools.build_transform-api",
        "//tools/base/third_party:com.beust_jcommander",
        "//tools/base/third_party:com.fasterxml.jackson.core_jackson-core",
        "//tools/base/third_party:com.github.gundy_semver4j",
        "//tools/base/third_party:com.google.android_annotations",
        "//tools/base/third_party:com.google.api-client_google-api-client",
        "//tools/base/third_party:com.google.api.grpc_proto-google-common-protos",
        "//tools/base/third_party:com.google.apis_google-api-services-storage",
        "//tools/base/third_party:com.google.auth_google-auth-library-credentials",
        "//tools/base/third_party:com.google.auto.value_auto-value",
        "//tools/base/third_party:com.google.auto.value_auto-value-annotations",
        "//tools/base/third_party:com.google.auto_auto-common",
        "//tools/base/third_party:com.google.code.findbugs_jsr305",
        "//tools/base/third_party:com.google.code.gson_gson",
        "//tools/base/third_party:com.google.crypto.tink_tink",
        "//tools/base/third_party:com.google.dagger_dagger",
        "//tools/base/third_party:com.google.errorprone_error_prone_annotations",
        "//tools/base/third_party:com.google.flatbuffers_flatbuffers-java",
        "//tools/base/third_party:com.google.guava_failureaccess",
        "//tools/base/third_party:com.google.guava_guava",
        "//tools/base/third_party:com.google.guava_guava-testlib",
        "//tools/base/third_party:com.google.guava_listenablefuture",
        "//tools/base/third_party:com.google.http-client_google-http-client",
        "//tools/base/third_party:com.google.http-client_google-http-client-jackson2",
        "//tools/base/third_party:com.google.j2objc_j2objc-annotations",
        "//tools/base/third_party:com.google.jimfs_jimfs",
        "//tools/base/third_party:com.google.oauth-client_google-oauth-client",
        "//tools/base/third_party:com.google.protobuf.nano_protobuf-javanano",
        "//tools/base/third_party:com.google.protobuf_protobuf-java",
        "//tools/base/third_party:com.google.protobuf_protobuf-java-util",
        "//tools/base/third_party:com.google.testing.compile_compile-testing",
        "//tools/base/third_party:com.google.testing.platform_android-device-provider-local",
        "//tools/base/third_party:com.google.testing.platform_core-proto",
        "//tools/base/third_party:com.google.testing.platform_launcher",
        "//tools/base/third_party:com.google.truth.extensions_truth-java8-extension",
        "//tools/base/third_party:com.google.truth_truth",
        "//tools/base/third_party:com.googlecode.java-diff-utils_diffutils",
        "//tools/base/third_party:com.googlecode.json-simple_json-simple",
        "//tools/base/third_party:com.googlecode.juniversalchardet_juniversalchardet",
        "//tools/base/third_party:com.squareup.okhttp_okhttp",
        "//tools/base/third_party:com.squareup.okio_okio",
        "//tools/base/third_party:com.squareup_javapoet",
        "//tools/base/third_party:com.squareup_javawriter",
        "//tools/base/third_party:com.sun.activation_javax.activation",
        "//tools/base/third_party:com.sun.istack_istack-commons-runtime",
        "//tools/base/third_party:com.sun.istack_istack-commons-tools",
        "//tools/base/third_party:com.sun.xml.bind.external_relaxng-datatype",
        "//tools/base/third_party:com.sun.xml.bind.external_rngom",
        "//tools/base/third_party:com.sun.xml.dtd-parser_dtd-parser",
        "//tools/base/third_party:com.sun.xml.fastinfoset_FastInfoset",
        "//tools/base/third_party:com.thoughtworks.qdox_qdox",
        "//tools/base/third_party:commons-codec_commons-codec",
        "//tools/base/third_party:commons-io_commons-io",
        "//tools/base/third_party:commons-lang_commons-lang",
        "//tools/base/third_party:commons-logging_commons-logging",
        "//tools/base/third_party:de.undercouch_gradle-download-task",
        "//tools/base/third_party:info.picocli_picocli",
        "//tools/base/third_party:io.grpc_grpc-all",
        "//tools/base/third_party:io.grpc_grpc-api",
        "//tools/base/third_party:io.grpc_grpc-auth",
        "//tools/base/third_party:io.grpc_grpc-context",
        "//tools/base/third_party:io.grpc_grpc-core",
        "//tools/base/third_party:io.grpc_grpc-netty",
        "//tools/base/third_party:io.grpc_grpc-okhttp",
        "//tools/base/third_party:io.grpc_grpc-protobuf",
        "//tools/base/third_party:io.grpc_grpc-protobuf-lite",
        "//tools/base/third_party:io.grpc_grpc-protobuf-nano",
        "//tools/base/third_party:io.grpc_grpc-stub",
        "//tools/base/third_party:io.grpc_grpc-testing",
        "//tools/base/third_party:io.netty_netty-all",
        "//tools/base/third_party:io.netty_netty-buffer",
        "//tools/base/third_party:io.netty_netty-codec",
        "//tools/base/third_party:io.netty_netty-codec-http",
        "//tools/base/third_party:io.netty_netty-codec-http2",
        "//tools/base/third_party:io.netty_netty-codec-socks",
        "//tools/base/third_party:io.netty_netty-common",
        "//tools/base/third_party:io.netty_netty-handler",
        "//tools/base/third_party:io.netty_netty-handler-proxy",
        "//tools/base/third_party:io.netty_netty-resolver",
        "//tools/base/third_party:io.netty_netty-transport",
        "//tools/base/third_party:io.opencensus_opencensus-api",
        "//tools/base/third_party:io.opencensus_opencensus-contrib-grpc-metrics",
        "//tools/base/third_party:it.unimi.dsi_fastutil",
        "//tools/base/third_party:jakarta.activation_jakarta.activation-api",
        "//tools/base/third_party:jakarta.xml.bind_jakarta.xml.bind-api",
        "//tools/base/third_party:javax.annotation_javax.annotation-api",
        "//tools/base/third_party:javax.inject_javax.inject",
        "//tools/base/third_party:jline_jline",
        "//tools/base/third_party:junit_junit",
        "//tools/base/third_party:net.bytebuddy_byte-buddy",
        "//tools/base/third_party:net.bytebuddy_byte-buddy-agent",
        "//tools/base/third_party:net.java.dev.jna_jna",
        "//tools/base/third_party:net.java.dev.jna_jna-platform",
        "//tools/base/third_party:net.sf.jopt-simple_jopt-simple",
        "//tools/base/third_party:net.sf.kxml_kxml2",
        "//tools/base/third_party:nl.jqno.equalsverifier_equalsverifier",
        "//tools/base/third_party:org.antlr_ST4",
        "//tools/base/third_party:org.antlr_antlr",
        "//tools/base/third_party:org.antlr_antlr-runtime",
        "//tools/base/third_party:org.antlr_antlr4",
        "//tools/base/third_party:org.antlr_antlr4-runtime",
        "//tools/base/third_party:org.apache.ant_ant",
        "//tools/base/third_party:org.apache.ant_ant-antlr",
        "//tools/base/third_party:org.apache.ant_ant-junit",
        "//tools/base/third_party:org.apache.ant_ant-launcher",
        "//tools/base/third_party:org.apache.commons_commons-compress",
        "//tools/base/third_party:org.apache.commons_commons-lang3",
        "//tools/base/third_party:org.apache.httpcomponents_httpclient",
        "//tools/base/third_party:org.apache.httpcomponents_httpcore",
        "//tools/base/third_party:org.apache.httpcomponents_httpmime",
        "//tools/base/third_party:org.apache.maven_maven-aether-provider",
        "//tools/base/third_party:org.apache.maven_maven-artifact",
        "//tools/base/third_party:org.apache.maven_maven-builder-support",
        "//tools/base/third_party:org.apache.maven_maven-model",
        "//tools/base/third_party:org.apache.maven_maven-model-builder",
        "//tools/base/third_party:org.apache.maven_maven-repository-metadata",
        "//tools/base/third_party:org.apiguardian_apiguardian-api",
        "//tools/base/third_party:org.bouncycastle_bcpkix-jdk15on",
        "//tools/base/third_party:org.bouncycastle_bcprov-jdk15on",
        "//tools/base/third_party:org.checkerframework_checker-compat-qual",
        "//tools/base/third_party:org.checkerframework_checker-qual",
        "//tools/base/third_party:org.codehaus.groovy_groovy",
        "//tools/base/third_party:org.codehaus.groovy_groovy-all",
        "//tools/base/third_party:org.codehaus.groovy_groovy-ant",
        "//tools/base/third_party:org.codehaus.groovy_groovy-astbuilder",
        "//tools/base/third_party:org.codehaus.groovy_groovy-cli-picocli",
        "//tools/base/third_party:org.codehaus.groovy_groovy-console",
        "//tools/base/third_party:org.codehaus.groovy_groovy-datetime",
        "//tools/base/third_party:org.codehaus.groovy_groovy-docgenerator",
        "//tools/base/third_party:org.codehaus.groovy_groovy-groovydoc",
        "//tools/base/third_party:org.codehaus.groovy_groovy-groovysh",
        "//tools/base/third_party:org.codehaus.groovy_groovy-jmx",
        "//tools/base/third_party:org.codehaus.groovy_groovy-json",
        "//tools/base/third_party:org.codehaus.groovy_groovy-jsr223",
        "//tools/base/third_party:org.codehaus.groovy_groovy-macro",
        "//tools/base/third_party:org.codehaus.groovy_groovy-nio",
        "//tools/base/third_party:org.codehaus.groovy_groovy-servlet",
        "//tools/base/third_party:org.codehaus.groovy_groovy-sql",
        "//tools/base/third_party:org.codehaus.groovy_groovy-swing",
        "//tools/base/third_party:org.codehaus.groovy_groovy-templates",
        "//tools/base/third_party:org.codehaus.groovy_groovy-test",
        "//tools/base/third_party:org.codehaus.groovy_groovy-test-junit5",
        "//tools/base/third_party:org.codehaus.groovy_groovy-testng",
        "//tools/base/third_party:org.codehaus.groovy_groovy-xml",
        "//tools/base/third_party:org.codehaus.mojo_animal-sniffer-annotations",
        "//tools/base/third_party:org.codehaus.plexus_plexus-component-annotations",
        "//tools/base/third_party:org.codehaus.plexus_plexus-interpolation",
        "//tools/base/third_party:org.codehaus.plexus_plexus-utils",
        "//tools/base/third_party:org.easymock_easymock",
        "//tools/base/third_party:org.eclipse.aether_aether-api",
        "//tools/base/third_party:org.eclipse.aether_aether-connector-basic",
        "//tools/base/third_party:org.eclipse.aether_aether-impl",
        "//tools/base/third_party:org.eclipse.aether_aether-spi",
        "//tools/base/third_party:org.eclipse.aether_aether-transport-file",
        "//tools/base/third_party:org.eclipse.aether_aether-transport-http",
        "//tools/base/third_party:org.eclipse.aether_aether-util",
        "//tools/base/third_party:org.eclipse.jdt.core.compiler_ecj",
        "//tools/base/third_party:org.glassfish.jaxb_codemodel",
        "//tools/base/third_party:org.glassfish.jaxb_jaxb-runtime",
        "//tools/base/third_party:org.glassfish.jaxb_jaxb-xjc",
        "//tools/base/third_party:org.glassfish.jaxb_txw2",
        "//tools/base/third_party:org.glassfish.jaxb_xsom",
        "//tools/base/third_party:org.gradle_gradle-tooling-api",
        "//tools/base/third_party:org.hamcrest_hamcrest-core",
        "//tools/base/third_party:org.jacoco_org.jacoco.agent",
        "//tools/base/third_party:org.jacoco_org.jacoco.core",
        "//tools/base/third_party:org.jacoco_org.jacoco.report",
        "//tools/base/third_party:org.jdom_jdom2",
        "//tools/base/third_party:org.jetbrains.dokka_dokka-android-gradle-plugin",
        "//tools/base/third_party:org.jetbrains.dokka_dokka-gradle-plugin",
        "//tools/base/third_party:org.jetbrains.intellij.deps_trove4j",
        "//tools/base/third_party:org.jetbrains.kotlin.jvm_org.jetbrains.kotlin.jvm.gradle.plugin",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-android-extensions",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-android-extensions-runtime",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-annotation-processing-gradle",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-build-common",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-compiler-embeddable",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-compiler-runner",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-daemon-client",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-daemon-embeddable",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-gradle-plugin",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-gradle-plugin-api",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-gradle-plugin-model",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-reflect",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-script-runtime",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-scripting-common",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-scripting-compiler-embeddable",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-scripting-compiler-impl-embeddable",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-scripting-jvm",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-stdlib",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-stdlib-common",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-stdlib-jdk7",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-stdlib-jdk8",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-test",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-test-common",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-util-io",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-util-klib",
        "//tools/base/third_party:org.jetbrains.kotlinx_kotlinx-coroutines-core",
        "//tools/base/third_party:org.jetbrains_annotations",
        "//tools/base/third_party:org.json_json",
        "//tools/base/third_party:org.jsoup_jsoup",
        "//tools/base/third_party:org.junit.jupiter_junit-jupiter-api",
        "//tools/base/third_party:org.junit.jupiter_junit-jupiter-engine",
        "//tools/base/third_party:org.junit.platform_junit-platform-commons",
        "//tools/base/third_party:org.junit.platform_junit-platform-engine",
        "//tools/base/third_party:org.junit.platform_junit-platform-launcher",
        "//tools/base/third_party:org.junit.vintage_junit-vintage-engine",
        "//tools/base/third_party:org.jvnet.staxex_stax-ex",
        "//tools/base/third_party:org.mockito_mockito-core",
        "//tools/base/third_party:org.objenesis_objenesis",
        "//tools/base/third_party:org.opentest4j_opentest4j",
        "//tools/base/third_party:org.ow2.asm_asm",
        "//tools/base/third_party:org.ow2.asm_asm-analysis",
        "//tools/base/third_party:org.ow2.asm_asm-commons",
        "//tools/base/third_party:org.ow2.asm_asm-tree",
        "//tools/base/third_party:org.ow2.asm_asm-util",
        "//tools/base/third_party:org.slf4j_jcl-over-slf4j",
        "//tools/base/third_party:org.slf4j_slf4j-api",
        "//tools/base/third_party:org.smali_baksmali",
        "//tools/base/third_party:org.smali_dexlib2",
        "//tools/base/third_party:org.smali_util",
        "//tools/base/third_party:org.tensorflow_tensorflow-lite-metadata",
        "//tools/base/third_party:org.testng_testng",
        "//tools/base/third_party:xerces_xercesImpl",
        "//tools/base/third_party:xml-apis_xml-apis",
    ],
    visibility = ["//tools/base/build-system:__pkg__"],
)

maven_repository(
    name = "agp_artifacts",
    artifacts = [
        "//tools/base/common:common_bzl",
    ],
    visibility = ["//tools/base/build-system:__pkg__"],
)
