load("//tools/base/bazel:coverage.bzl", "coverage_java_test")
load("//tools/base/bazel:utils.bzl", "merged_zip")

# The Gmaven repository as built with the hybrid gradle/bazel build.
merged_zip(
    name = "gmaven",
    srcs = [
        "//tools/base:agp_artifacts.zip",
        "//tools/base/build-system:android_gradle_plugin.zip",
        "//tools/data-binding:data_binding_runtime.zip",
    ],
)

java_library(
    name = "java_tests",
    srcs = ["src/test/java/com/android/tools/test/GmavenZipTest.java"],
    deps = [
        "//tools/base/annotations",
        "//tools/base/common:tools.common",
        "//tools/base/testutils:tools.testutils",
        "@maven//:com.google.guava.guava",
        "@maven//:com.google.truth.truth",
        "@maven//:junit.junit",
    ],
)

coverage_java_test(
    name = "tests",
    data = [
        ":gmaven.zip",
    ],
    jvm_flags = [
        "-Dtest.suite.jar=tests.jar",
        "-Dfile.encoding=UTF-8",
        "-Dsun.jnu.encoding=UTF-8",
        "-Dmaven.repo.local=/tmp/localMavenRepo",  # For gradle publishing, writing to ~/.m2
    ],
    tags = [
        "block-network",
        "no_test_windows",  # b/73306170
    ],
    test_class = "com.android.testutils.JarTestSuite",
    runtime_deps = [
        ":java_tests",
    ],
)
