load("//tools/base/bazel:coverage.bzl", "coverage_java_test")
load("//tools/base/bazel:maven.bzl", "maven_repository")
load("//tools/base/bazel:utils.bzl", "merged_zip")

# Gmaven artifacts that are not used by the gradle builds
maven_repository(
    name = "other_gmaven_artifacts",
    #keep sorted
    artifacts = [
        "//tools/analytics-library/inspector",
        "//tools/analytics-library/publisher",
        "//tools/base/chunkio:tools.chunkio",
        "//tools/base/draw9patch:tools.draw9patch",
        "//tools/base/pixelprobe:tools.pixelprobe",
    ],
    include_transitive_deps = False,
)

# The Gmaven repository as built with the hybrid gradle/bazel build.
merged_zip(
    name = "gmaven",
    srcs = [
        ":other_gmaven_artifacts.zip",
        "//tools/base:agp_artifacts.zip",
        "//tools/base/build-system:android_gradle_plugin.zip",
        "//tools/data-binding:data_binding_runtime.zip",
    ],
)

java_library(
    name = "java_tests",
    srcs = ["src/test/java/com/android/tools/test/GmavenZipTest.java"],
    resources = [
        "src/test/resources/com/android/tools/test/gmaven-aars.txt",
        "src/test/resources/com/android/tools/test/gmaven-jars.txt",
        "src/test/resources/com/android/tools/test/gmaven-poms.txt",
    ],
    deps = [
        "//tools/base/annotations",
        "//tools/base/common:tools.common",
        "//tools/base/testutils:tools.testutils",
        "@maven//:com.google.guava.guava",
        "@maven//:com.google.truth.truth",
        "@maven//:junit.junit",
    ],
)

coverage_java_test(
    name = "tests",
    data = [
        ":gmaven.zip",
    ],
    jvm_flags = [
        "-Dtest.suite.jar=tests.jar",
        "-Dfile.encoding=UTF-8",
        "-Dsun.jnu.encoding=UTF-8",
        "-Dmaven.repo.local=/tmp/localMavenRepo",  # For gradle publishing, writing to ~/.m2
    ],
    tags = [
        "block-network",
        "no_test_windows",  # b/73306170
    ],
    test_class = "com.android.testutils.JarTestSuite",
    runtime_deps = [
        ":java_tests",
    ],
)
